--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "account",
+  "name": "aladdin-vue",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "ninemilli.song",
