--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
     "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "extract-text-webpack-plugin": "^3.0.0",
