--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "css-loader": "^0.28.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-html": "^4.0.5",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-vue": "^5.0.0-beta.3",
     "eslint-plugin-vuefix": "^0.2.1",
